# mlx-week3

./: .gitattributes  .gitignore  AlexTwoTowers.pth  AlexTwoTowersDict.pth  AlexTwoTowersDictLocal.pth  AlexTwoTowersLocal.pth  AllTexts.txt  Notes.md  RNN.ipynb  alex-simple-model.ipynb  download_data.ipynb  indices.pkl  model.ipynb  pyproject.toml  pytorch.ipynb  query_ids.pkl  results 1.txt  results 2.csv  results 3.csv  results 4.txt  results 5.csv  results 6.txt  results-score.txt  sid_rr_loop.ipynb  spm_AllTexts.model  spm_AllTexts.vocab  test.parquet  test_dataset_triplets.parquet  test_triplets.parquet  texts_dataset.txt  train.parquet  train_triplets.parquet  training_dataset_triplets.parquet  training_dataset_with_negative_samples.parquet  url_to_doctext_mapping.pkl  validate.parquet  validate_dataset_triplets.parquet  validate_dataset_with_negative_samples.parquet  validate_triplets.parquet  word2vec.model  (+1 more)
jacob/: data_preprocessing.ipynb  test copy.ipynb  test.ipynb
notebooks/: rnn_fun.ipynb  sid_rr_loop.ipynb  sid_training_loop.ipynb
tests/: negative_sampling_test.py
utils/: data_utils.py
